--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,9 +12,9 @@
   </div>
 
   <div class="form-group">
-    <label for="sleepy">Devour Burger?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Devoured<br>
-    <input type="radio" name="sleepy" value="0"> not devoured
+    <label for="devour">Devour Burger?</label><br>
+    <input type="radio" name="devour" value="1" checked> Devoured<br>
+    <input type="radio" name="devour" value="0"> not devoured
   </div>
 
   <button type="submit">Add Burger</button>
