--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,26 @@
-<h1>Eat Dat Burger!</h1>
+<h1>Burgers</h1>
 
+<h2>Burgers that are not devoured!</h2>
 
+<ul>
+  {{#each burger}}
+    {{#unless devoured}}
+      {{> burger/burger-block devoured=true}}
+    {{/unless}}
+  {{/each}}
+</ul>
 
+<h2>Burgers that are devoured!</h2>
 
-<h2>Add a burger</h2>
+<ul>
+  {{#each burger}}
+    {{#if devoured}}
+      {{> burger/burger-block devoured=false}}
+    {{/if}}
+  {{/each}}
+</ul>
+
+<h2>Add a Burger</h2>
 <form class="create-form">
 
   <div class="form-group">
@@ -11,11 +28,6 @@
     <input type="text" id="ca" name="name">
   </div>
 
-  <div class="form-group">
-    <label for="devour">Devour Burger?</label><br>
-    <input type="radio" name="devour" value="1" checked> Devoured<br>
-    <input type="radio" name="devour" value="0"> not devoured
-  </div>
 
   <button type="submit">Add Burger</button>
 </form>
